# mistria-ai

./: .dockerignore  .env.example  .env.server  .gitignore  Dockerfile  Makefile  README.md  app.py  chat_cli.py  companions.json  database.json  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  users_export.csv
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: AI User Journey.md  API Documentation.md  Mistria AI.md  Mistria_ AI Implementation & Risk.md  api_integration_guide.md
scripts/: backfill_memory.py  bootstrap.sh  http_probe.py  reindex_memory_vectors.py  runpod_bootstrap.sh  smoke_stack.py
src/: __init__.py  chat.py  config.py  engagement.py  llm.py  persistence.py  persona.py  prompts.py  pulse.py  sessions.py
src/Logging/: __init__.py
src/auth/: __init__.py  crypto.py  exceptions.py  service.py
src/backend/: __init__.py  exceptions.py  ollama_runtime.py  runtime.py  schemas.py  service.py  websocket_handler.py
src/chat/: __init__.py  client.py
src/chat_client/: __init__.py  client.py
src/companion/: __init__.py  contracts.py  exceptions.py  schemas.py  service.py
src/memory/: __init__.py  background.py  contracts.py  embeddings.py  events.py  extraction.py  prompts.py  schemas.py  service.py  vector_store.py
src/storage/: __init__.py  conversation_store.py  database.py  exceptions.py  memory_repository.py  models.py  repositories.py  service.py
static/: chat.html
tests/: conftest.py  test_chat_service.py  test_companion_service.py  test_database_schema.py  test_memory_config.py  test_memory_embeddings.py  test_memory_extraction.py  test_memory_extraction_service.py  test_memory_prompts.py  test_memory_repository.py  test_memory_service.py  test_memory_vector_store.py  test_vllm_runtime.py
tests/unit/: test_memory_chat_flow.py  test_streamlit_app.py
tests/unit/auth/: test_auth_service.py
tests/unit/backend/: test_chat_service.py  test_debug_endpoints.py  test_main_endpoints.py  test_runtime.py  test_vllm_runtime.py  test_websocket_handler.py
tests/unit/chat/: test_client.py
tests/unit/companion/: test_companion_service.py
tests/unit/memory/: test_background_worker.py  test_config.py  test_embeddings.py  test_events.py  test_extraction_service.py  (+4 more)
(+7 files in other folders)
