[project]
name = "mistria-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi>=0.115.12",
    "python-dotenv>=1.2.2",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.0",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
inference = [
    "vllm>=0.9.0; sys_platform == 'linux'",
]
