[project]
name = "mistria-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi>=0.115.12",
    "ollama==0.4.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.0",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
inference = [
    "transformers>=4.51.1,<4.53.0",
    "vllm>=0.9.0; sys_platform == 'linux'",
]
